# Eva

./: .gitignore  EVA Boot.command  EVA_DEVELOPMENT_BACKLOG.md  README.md  eva-install-deps.sh  eva-start.sh  eva-stop.sh  pyproject.toml
config/: eva.example.yaml
docs/: EVA_STATUS.md  find-claude-logs.sh  hybrid-architecture.md  phase-1-macos-voice-qa.md  signature-talk.md
infra/: .env.example  README.md  db_client.py  docker-compose.yml  migrate_sqlite.py  requirements.txt
modules/: README.md
modules/autostart/: README.md  eva-boot.sh  eva-install-services.sh  eva-screenpipe-watchdog.py  eva-status.sh  eva-uninstall-services.sh  eva-wake-daemon.py  run-service.sh
modules/channels/: channels_api.py  channels_config.template.json  facebook_connector.py  linkedin_connector.py  reddit_connector.py  requirements.txt  signal_store.py  start.sh  twitter_connector.py
modules/command-center/: README.md  tailwind.config.js
modules/content-engine/: README.md  database.py  generator.py  linkedin.py  main.py  models.py  requirements.txt  scheduler.py  setup.sh  user_profile.example.json  voice_dna.py
services/: __init__.py
src/: App.tsx
tests/: test_audio.py  test_bridge.py  test_cli.py  test_executor.py  test_orchestrator.py  test_organizer.py  test_perplexity_client.py  test_policy.py  test_protocols.py  test_recorded_decisions.py  test_reminder_cli.py  test_reminder_orchestrator.py  test_reminder_parser.py  test_reminder_scheduler.py  test_routing.py  test_silence_completion.py  test_stt.py  test_tts.py  test_voice_cli.py  test_voice_loop.py
(+252 files in other folders)
